<resources>
    <string name="app_name">Just Java</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="zero">0</string>
    <string name="price">Price</string>
    <string name="zero_dollars">$0</string>
    <string name="order">order</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="toppings">toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="order_summary">order summary</string>
    <string name="chocolate">Chocolate</string>
</resources>
